# spuz

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  justfile  readme.md
.github/: check.yml
.github/workflows/: check.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/fsp/: Cargo.toml
crates/fsp/src/: lib.rs
crates/get/: Cargo.toml
crates/get/src/: endpoints.rs  err.rs  fetch.rs  ir.rs  lib.rs  test.rs  vanilla.rs
crates/ir/: Cargo.toml
crates/ir/src/: launch.rs  lib.rs
crates/jvm/: Cargo.toml
crates/jvm/src/: err.rs  lib.rs
crates/spec/: Cargo.toml
crates/spec/src/: lib.rs
crates/spec/src/client/: latest.rs
crates/spec/src/common/: base.rs  libs.rs  misc.rs  mod.rs  os.rs  rule.rs  version.rs
crates/spec/src/tests/: mod.rs  plain.rs
crates/spec/src/vanilla/: mod.rs
crates/spec/src/vanilla/assets/: mod.rs
crates/spec/src/vanilla/listing/: mod.rs
crates/spuz_cli/: Cargo.toml
crates/spuz_cli/src/: main.rs  telemetry.rs
crates/spuz_folder/: Cargo.toml
crates/spuz_folder/src/: dirs.rs  err.rs  file_demand.rs  folder.rs  hash.rs  instances.rs  jres.rs  lib.rs  libraries.rs  statefile.rs  versions.rs
crates/spuz_get/: Cargo.toml  readme.md
crates/spuz_get/src/: client.rs  err.rs  event.rs  ext.rs  job.rs  json_resource.rs  lib.rs  shared.rs  task.rs  worker.rs
crates/spuz_get/src/vanilla/: mod.rs
crates/spuz_jvm/: Cargo.toml
crates/spuz_jvm/src/: compose.rs  err.rs  lib.rs  process.rs  useful.rs
crates/spuz_launcher/: Cargo.toml
crates/spuz_launcher/src/: internal.rs  lib.rs  opts.rs
crates/spuz_piston/: Cargo.toml  readme.md
crates/spuz_piston/src/: api.rs  assets.rs  err.rs  lib.rs  libs.rs  list.rs  manifest.rs  package.rs  platform.rs  profiles.rs  rule.rs  runtime.rs  shared.rs
crates/spuz_piston/src/test/: all.json  manifest.json  mod.rs  runtime.rs
crates/spuz_piston/src/v/: mod.rs  shared.rs  v12.rs  v19.rs
crates/spuz_spawner/: Cargo.toml
crates/spuz_spawner/src/: compose.rs  layer.rs  lib.rs  process.rs  useful.rs
crates/spuz_vanilla/: Cargo.toml
crates/spuz_wrench/: Cargo.toml
crates/spuz_wrench/src/: internal.rs  lib.rs  macros.rs  mandep.rs  opts.rs
versions/: 1.19.3-pre1.json  1.19.3-pre2.json  1.19.3-pre3.json  1.19.3-rc1.json  1.19.3-rc2.json  1.19.3-rc3.json  1.19.3.json  1.19.4-pre1.json  1.19.4-pre2.json  1.19.4-pre3.json  1.19.4-pre4.json  1.19.4-rc1.json  1.19.4-rc2.json  1.19.4-rc3.json  1.19.4.json  1.20-pre1.json  1.20-pre2.json  1.20-pre3.json  1.20-pre4.json  1.20-pre5.json  1.20-pre6.json  1.20-pre7.json  1.20-rc1.json  1.20.1-rc1.json  1.20.1.json  1.20.2-pre1.json  1.20.2-pre2.json  1.20.2-pre3.json  1.20.2-pre4.json  1.20.2-rc1.json  1.20.2-rc2.json  1.20.2.json  1.20.3-pre1.json  1.20.3-pre2.json  1.20.3-pre3.json  1.20.3-pre4.json  1.20.3-rc1.json  1.20.3.json  1.20.4-rc1.json  1.20.4.json  (+60 more)
