[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
authors = ["Danil Karpenko <limpix31@gmail.com>"]
license = "MIT"
repository = "https://github.com/coppebars/spuz.git"
readme = "readme.md"

[workspace.dependencies]
tracing       = { version = "0" }
thiserror     = { version = "1" }
serde         = { version = "1", features = ["derive"] }
serde_json    = { version = "1" }

spuz_piston   = { path = "crates/spuz_piston" }
spuz_folder   = { path = "crates/spuz_folder" }
spuz_spawner  = { path = "crates/spuz_spawner" }
spuz_wrench   = { path = "crates/spuz_wrench" }

[workspace.lints.rust]
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
all = "warn"
module_name_repetitions = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
