[package]
name = "spuz_cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
spuz_spec = { workspace = true }

serde_json = { workspace = true }

bpaf = { version = "0", features = ["derive"] }

[lints]
workspace = true
