[package]
name = "spuz_spec"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Description of a variety of minecraft json specifications"

[dependencies]
serde      = { workspace = true }
serde_json = { version = "1" }
semver     = { version = "1", optional = true }
url        = { version = "2", features = ["serde"], optional = true }
cfg-if     = { version = "1" }

[lints]
workspace = true
