[package]
name = "spuz_cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
spuz_folder        = { workspace = true }
spuz_wrench        = { workspace = true }
spuz_piston        = { workspace = true }
spuz_get           = { workspace = true }
spuz_spawner       = { workspace = true, features = ["useful-layers", "process-handle"] }

tracing            = { workspace = true }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
smol               = { version = "2" }
tokio              = { version = "1", features = ["full"] }
anyhow             = { version = "1" }

[lints]
workspace = true
