[package]
name = "spuz_folder"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
spuz_piston  = { workspace = true }

tracing      = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

tokio        = { version = "1", features = ["fs", "io-util", "sync", "rt-multi-thread"] }
cfg-if       = { version = "1" }

[lints]
workspace = true
