[package]
name = "spuz_get"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
arc-swap   = { version = "1" }
reqwest    = { version = "0", features = ["json"] }
serde      = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[features]
