[package]
name = "spuz_jvm"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
thiserror   = { workspace = true }

bytes       = { version = "1" }
tokio       = { version = "1", features = ["sync", "io-util", "process", "rt-multi-thread", "macros"] }

[lints]
workspace = true
