[package]
name = "spuz_piston"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "1"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

cfg-if     = { version = "1" }

[dev-dependencies]
paste = { version = "1" }

[lints]
workspace = true
