[package]
name = "spuz_piston"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "1"
readme = "readme.md"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1" }
cfg-if      = { version = "1" }

[dev-dependencies]
paste = { version = "1" }

[lints]
workspace = true
