[package]
name = "spuz_piston"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Minecraft json documents described in Rust"
readme = "readme.md"
keywords = ["minecraft", "launcher", "piston-meta"]
categories = ["parsing"]

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1" }
cfg-if      = { version = "1" }

[dev-dependencies]
paste = { version = "1" }

[lints]
workspace = true
