[package]
name = "spuz_spawner"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
thiserror   = { workspace = true }
tracing     = { workspace = true }

bytes       = { version = "1" }
tokio       = { version = "1", features = ["sync", "io-util", "process", "rt-multi-thread", "macros"] }

[lints]
workspace = true

[features]
default = ['useful-layers', 'process-handle']
useful-layers = []
process-handle = []
