[package]
name = "spuz_spawner"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
thiserror     = { workspace = true }
tracing       = { workspace = true }

tokio         = { version = "1", features = ["sync", "io-util", "process", "rt-multi-thread", "macros"] }
async-channel = { version = "2" }

[lints]
workspace = true

[features]
useful-layers = []
process-handle = []
