[package]
name = "spuz_wrench"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
spuz_piston   = { workspace = true }
spuz_spawner  = { workspace = true }

tracing       = { workspace = true }

itertools     = { version = "0.13" }
typed-builder = { version = "0.18" }
cfg-if        = { version = "1" }

[lints]
workspace = true
